# hyper_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_server.py
backend/app/: main.py
backend/app/api/: sessions.py  websocket.py
backend/app/config/: system.py
manual/: API_명세서_251103.md  DB_스키마_251103.dbml  DB_스키마_README_251103.md  개발자_가이드_251103.md  사용자_메뉴얼_251103.md  시스템_아키텍처_명세서_251103.md  시스템_플로우차트_251103.md  에이전트_플로우차트_251103.md
manual/old/: ANALYSIS_SUMMARY_251029.md  COMPREHENSIVE_ANALYSIS_251029.md  DATABASE_SCHEMA_251102.md
manual/readme_251103_1/: API.md  ARCHITECTURE.md  CONFIGURATION.md  QUICK_REFERENCE.md  README.md
reports/: langchain_langgraph_1.0_utilities.md
reports/agent_logic/: cognitive_execute_patterns.md
reports/architecture/: nested_graph_hitl_guide.md  planning_based_execution_architecture.md
reports/base_agent/: implementation_plan_251103.md  langgraph_chatbot_architecture_plan_251103.md
reports/context_management/: langgraph_context_analysis.md
reports/db_schema/: langgraph_checkpointer_schema.md
reports/old/251012/: ARCHITECTURE_COMPLETE.md  ARCHITECTURE_REVIEW_REPORT.md  ARCHITECTURE_TODO_PROCESSFLOW_SUPPLEMENT.md  Spinner_flow.md  (+28 more)
reports/phase3/: supervisor_aggregator_design.md
reports/phase_checkpoint_hitl/: PHASE4_PLANNING.md
tests/: .env.example  README.md  STRUCTURE.md  check_databases.py  create_database.py  test_api.py  test_config.py  test_phase2.py  test_phase3.py  test_phase3_5.py  test_phase3_6.py  test_phase4_1.py  test_phase4_2.py  test_phase4_3.py  test_phase4_4.py  test_postgres_connection.py  test_supervisor_graph.py
(+455 files in other folders)
