[project]
name = "octo-chatbot"
version = "0.2.0"
description = "LangGraph 1.0 Supervisor Pattern Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # LangChain & LangGraph 1.0
    "langchain==1.0.3",
    "langchain-core==1.0.2",
    "langchain-openai==1.0.1",
    "langchain-community==0.4.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "langgraph-checkpoint-postgres==3.0.0",

    # FastAPI & WebSocket
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "websockets==12.0",
    "python-multipart==0.0.9",

    # Database
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.10",
    "aiosqlite==0.20.0",

    # Vector DB & Embeddings
    "faiss-cpu==1.9.0.post1",
    "sentence-transformers==5.1.1",
    "chromadb==1.1.1",

    # Configuration
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.10.1,<3.0.0",
    "python-dotenv==1.0.1",

    # Utilities
    "loguru==0.7.2",
    "tenacity==9.1.2",
    "rich==14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # for testing FastAPI
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
